--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,7 +1,7 @@
 .dialogs {
     display: grid;
     grid-template-columns: 2fr 10fr;
-    background-color: yellowgreen;
+    /*background-color: yellowgreen;*/
 
 }
 
