--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -3,3 +3,11 @@
     height: 100px;
     border-radius: 30px;
 }
+
+.container {
+    margin: 10px;
+}
+
+.selectedPage {
+    font-weight: bold;
+}
